compiles, does not work

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,11 @@
 [env:base]
 platform = espressif32@6.7.0
 framework = arduino
-;CDC enabled on boot:
-build_flags =  -DCDC_ENABLED -DJTAG_ENABLED -DMSC_ENABLED
 ;erase flash before upload:
 ;upload_flags = --erase-all
 ;upload speed:
 upload_speed = 115200
 ;build mode debug
-build_type = debug
 ;upload port (put yours here):
 ;upload_port = COM7                     ;for windows
 ;monitor_port = COM7                    ;for windows
@@ -43,8 +40,15 @@ lib_deps =
 ; This is for v3
 extends = env:base
 board = esp32-s3-devkitc-1
-build_flags = -DARDUINO_ESP32S3_DEV
-
+build_type = debug
+debug_tool = esp-bridge
+upload_protocol = esptool
+build_flags = 
+    -D ARDUINO_ESP32S3_DEV
+    -D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1 
+    -D CORE_DEBUG_LEVEL=5
+    
 [env:v2_0]
 ; This is for v3
 extends = env:base
